--- a/functions/package.json
+++ b/functions/package.json
@@ -10,14 +10,17 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "algoliasearch": "^3.32.0",
-    "firebase-admin": "^6.5.1",
-    "firebase-functions": "^2.1.0"
+    "algoliasearch": "^3.33.0",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.0.2"
   },
   "devDependencies": {
     "ajv": "^5.5.2",
     "eslint": "^4.12.0",
     "eslint-plugin-promise": "^3.6.0"
+  },
+  "engines": {
+    "node": "8"
   },
   "private": true
 }
